--- a/study-system-app/src/Routes/Login/components/LoginForm.scss
+++ b/study-system-app/src/Routes/Login/components/LoginForm.scss
@@ -1,17 +1,40 @@
-$mainColour: #ff4c4c;
+$mainColour: #4267B2;
 
-.Login {
+.LoginBox {
   padding: 60px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 
   form {
     margin: 0 auto;
-    max-width: 320px;
+    max-width: auto;
+    padding: 30px 0px 0px 0px;
 
+    .form-group {
+      width: 380px;
+    }
     .btn {
       background-color: $mainColour;
       outline: none;
       border: none;
+      margin-bottom: 20px;
     }
   }
 
+}
+
+.card{
+  border: none;
+  align-items: center;
+  justify-content: center;
+  .card-title{
+    font-size: 30px;
+  }
+  .card-text{
+    float: right;
+    font-size: 15px;
+  }
 }
