--- a/study-system-app/src/Routes/Login/components/LoginForm.scss
+++ b/study-system-app/src/Routes/Login/components/LoginForm.scss
@@ -1,3 +1,4 @@
+//Colour variables
 $mainColour: #4267B2;
 
 .LoginBox {
@@ -7,12 +8,10 @@ $mainColour: #4267B2;
   justify-content: center;
   width: 100%;
   height: 100%;
-
   form {
     margin: 0 auto;
     max-width: auto;
     padding: 30px 0px 0px 0px;
-
     .form-group {
       width: 380px;
     }
@@ -23,10 +22,9 @@ $mainColour: #4267B2;
       margin-bottom: 20px;
     }
   }
-
 }
 
-.card{
+.card {
   border: none;
   align-items: center;
   justify-content: center;
