--- a/study-system-app/src/Routes/Login/components/LoginForm.scss
+++ b/study-system-app/src/Routes/Login/components/LoginForm.scss
@@ -23,6 +23,10 @@ $mainColour: #4267B2;
       font-size: 17px;
       margin-bottom: 20px;
     }
+    .btn-custom-one:hover, .btn-custom-one:focus, .btn-custom-one:active {
+        background-color: #1c5ad8;
+        border: none;
+    }
     .btn-custom-two {
       color: "white";
       border: 1px solid rgba(218, 223, 225, 1);
@@ -34,6 +38,10 @@ $mainColour: #4267B2;
         width: 20px;
         margin-right: 10px;
       }
+    }
+    .btn-custom-two:hover, .btn-custom-two:focus, .btn-custom-two:active {
+        background-color: #f6f6f6;
+        border: 1px solid rgba(218, 223, 225, 1);
     }
 
   }
