--- a/study-system-app/src/Routes/Login/components/LoginNavBar.scss
+++ b/study-system-app/src/Routes/Login/components/LoginNavBar.scss
@@ -13,12 +13,17 @@
       font-size: 1rem;
     }
   }
-  .btn{
+  .btn-custom{
     background-color: #FFFFFF;
     color: #30373F;
     border-color: #30373F;
     font-size: 1rem;
     width: 10%;
     margin-right: 100px;
+  }
+  .btn-custom:hover, .btn-custom:focus, .btn-custom:active {
+    color: #30373F!important;
+    background-color: #f6f6f6;
+    border-color: #30373F;
   }
 }
