--- a/study-system-app/src/Routes/Login/components/LoginNavBar.scss
+++ b/study-system-app/src/Routes/Login/components/LoginNavBar.scss
@@ -1,6 +1,17 @@
 $btnColour-1: #FF6584;
 $btnColour-2: #ff325b;
 
+// Setting up mixins for different screen sizes
+@mixin for-phone-only {
+  @media (max-width: 599px) { @content; }
+}
+@mixin for-desktop-up {
+  @media (min-width: 1200px) { @content; }
+}
+@mixin for-big-desktop-up {
+  @media (min-width: 1800px) { @content; }
+}
+
 .navbar {
   height: 50px;
 
@@ -8,13 +19,34 @@ $btnColour-2: #ff325b;
     margin-left: 50px;
     position: relative;
     background-size: contain;
+    img{
+      @include for-phone-only {
+        margin-left: -120px;
+      }
+    }
   }
   .navbar-text{
     a {
       margin-right: 20px;
       color: #30373F;
       font-size: 1rem;
+      @include for-phone-only {
+        margin-right: 10px;
+      }
     }
+  }
+  #dropdown-menu-align-right{
+    all: unset;
+    cursor: pointer;
+    margin-right: -16px;
+  }
+  #dropdown-menu-align-right::after{
+    display: none;
+  }
+  .sign-in, .sign-up {
+    color: black;
+    font-style: normal;
+    font-size: 1.2rem;
   }
   .btn-custom{
     background-color: $btnColour-1;
@@ -23,9 +55,18 @@ $btnColour-2: #ff325b;
     font-size: 1rem;
     width: 10%;
     margin-right: 100px;
+    @include for-phone-only {
+      margin-right: 0px;
+    }
   }
   .btn-custom:hover, .btn-custom:focus, .btn-custom:active {
     color: #FFFFFF!important;
     background-color: $btnColour-2;
+  }
+}
+
+.navbar{
+  @include for-phone-only {
+    height: 100px;
   }
 }
