--- a/study-system-app/src/Routes/Registration/components/RegForm.scss
+++ b/study-system-app/src/Routes/Registration/components/RegForm.scss
@@ -1,6 +1,17 @@
 //Colour variables
 $mainColour: #4267B2;
 
+// Setting up mixins for different screen sizes
+@mixin for-phone-only {
+  @media (max-width: 599px) { @content; }
+}
+@mixin for-desktop-up {
+  @media (min-width: 1200px) { @content; }
+}
+@mixin for-big-desktop-up {
+  @media (min-width: 1800px) { @content; }
+}
+
 .RegBox {
   padding: 60px 0;
   display: flex;
@@ -8,12 +19,27 @@ $mainColour: #4267B2;
   justify-content: center;
   width: 100%;
   height: 100%;
+  @include for-phone-only {
+    margin-top: -60px;
+  }
+  .reg-card{
+    width: 25rem;
+    height: 36rem;
+    border: none;
+    @include for-phone-only {
+      width: 20rem;
+      height: 40rem;
+    }
+  }
   form {
     margin: 0 auto;
     max-width: auto;
     padding: 30px 0px 0px 0px;
     .form-group {
       width: 380px;
+      @include for-phone-only {
+        width: 300px;
+      }
     }
     .btn-custom-one {
       background-color: $mainColour;
