--- a/study-system-app/src/Routes/LandingPage/components/UserSelectFormStyling.scss
+++ b/study-system-app/src/Routes/LandingPage/components/UserSelectFormStyling.scss
@@ -13,7 +13,6 @@ $mainColour: #4267B2;
   height: 100%;
   .logo{
     display: inline-block;
-    clip-path: polygon(0 30%, 0 70%, 100% 70%, 100% 30%);
     margin: 0 100px;
   }
   .shadow{
@@ -21,6 +20,9 @@ $mainColour: #4267B2;
     box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.15) !important;
   }
   .card {
+    width: 20rem;
+    height: 25rem;
+    border: none;
     border: none;
     align-items: center;
     justify-content: center;
@@ -57,19 +59,20 @@ $mainColour: #4267B2;
   }
 }
 
-@media (min-width: 799px){
+@media (min-width: 889px){
   .SelectBox{
-    padding: 25vh 0;
+    padding: 20vh 0;
     max-width: inherit;
     .logo{
       width: 350px;
-      margin: 0 25px;
+      margin: 0 48px;
     }
     .shadow{
       margin-top: 0;
+      box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
     }
-  }
-  .logo{
-    margin: 0px 48px;
+    .card{
+      width: 25rem;
+    }
   }
 }
