--- a/study-system-app/src/Routes/Login/components/LoginNavBar.scss
+++ b/study-system-app/src/Routes/Login/components/LoginNavBar.scss
@@ -13,15 +13,15 @@ $btnColour-2: #ff325b;
 }
 
 .navbar {
-  height: 50px;
+  height: 48px;
 
   .navbar-brand{
-    margin-left: 50px;
+    margin-left: 5%;
     position: relative;
     background-size: contain;
     img{
       @include for-phone-only {
-        margin-left: -120px;
+        //margin-left: -100px;
       }
     }
   }
@@ -53,20 +53,14 @@ $btnColour-2: #ff325b;
     color: white;
     border: none;
     font-size: 1rem;
-    width: 10%;
-    margin-right: 100px;
+    width: 96px;
+    margin-right: 5%;
     @include for-phone-only {
-      margin-right: 0px;
+      margin-right: 0;
     }
   }
   .btn-custom:hover, .btn-custom:focus, .btn-custom:active {
     color: #FFFFFF!important;
     background-color: $btnColour-2;
-  }
-}
-
-.navbar{
-  @include for-phone-only {
-    height: 100px;
   }
 }
