UI Changes to Login System
+Removed Navigation Bars
+Increased readability of pages with specific titles
+Normalised colours and logos

--- a/study-system-app/src/Routes/LandingPage/components/UserSelectFormStyling.scss
+++ b/study-system-app/src/Routes/LandingPage/components/UserSelectFormStyling.scss
@@ -1,6 +1,7 @@
 //Colour variables
 //@use './src/Assets/abstracts';
-$mainColour: #4267B2;
+$mainColour: #FF6584;
+$mainColour-dark: #F84574;
 
 .SelectBox {
   padding: 0 0;
@@ -52,8 +53,9 @@ $mainColour: #4267B2;
         align-self: center;
         text-align: center;
       }
-      .linkBtn:hover{
-        text-decoration: none;
+      .linkBtn:hover, :focus, :active{
+          background-color: $mainColour-dark;
+          text-decoration: none;
       }
     }
   }
