Added Back Buttons
+Improved UX by adding physical back buttons to webpage elements
+Small fixes to Registration page, including field type of 'Full name' and autofocus

--- a/study-system-app/src/Routes/Registration/components/RegForm.scss
+++ b/study-system-app/src/Routes/Registration/components/RegForm.scss
@@ -25,7 +25,7 @@ $mainColour-dark: #F84574;
   }
   .reg-card{
     width: 25rem;
-    height: 36rem;
+    height: auto;
     border: none;
     @include for-phone-only {
       width: 20rem;
