--- a/study-system-app/src/index.scss
+++ b/study-system-app/src/index.scss
@@ -14,3 +14,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.btn-backBtn{
+  margin-bottom: 32px;
+  padding: 0px;
+}
