--- a/study-system-app/src/Routes/Registration/components/RegForm.scss
+++ b/study-system-app/src/Routes/Registration/components/RegForm.scss
@@ -11,6 +11,46 @@ $mainColour: #4267B2;
 @mixin for-big-desktop-up {
   @media (min-width: 1800px) { @content; }
 }
+.parent{
+  display: flex;
+}
+.Logo{
+  float: left;
+  margin-left: 200px;
+  img{
+    cursor: pointer;
+  }
+  p{
+    font-size: 1.4rem;
+    margin-left: 42px;
+  }
+  .Buttons{
+    display: block;
+    .btn-custom-three {
+      color: black;
+      border: 1px solid rgba(218, 223, 225, 1);
+      text-align: center;
+      font-size: 16px;
+      margin-right: 20px;
+    }
+    .btn-custom-three:hover {
+      color: white;
+      border: none;
+      background: #FF6584;
+    }
+    .btn-custom-admin {
+      color: black;
+      border: 1px solid rgba(218, 223, 225, 1);
+      text-align: center;
+      font-size: 16px;
+    }
+      .btn-custom-admin:hover {
+        color: white;
+        border: none;
+        background: #4267B2;
+      }
+    }
+  }
 
 .RegBox {
   padding: 60px 0;
@@ -24,7 +64,7 @@ $mainColour: #4267B2;
   }
   .reg-card{
     width: 25rem;
-    height: 36rem;
+    height: 34rem;
     border: none;
     @include for-phone-only {
       width: 20rem;
