Added availibity selection for edit student profile

--- a/study-system-app/src/Routes/StudentProfile/components/EditStudentProfile.scss
+++ b/study-system-app/src/Routes/StudentProfile/components/EditStudentProfile.scss
@@ -3,6 +3,7 @@ $mainColour: #4267B2;
 .show-profile {
   margin-left: 140px;
   margin-right: 140px;
+  padding-bottom: 20px;
   h1{
     font-size: 1.5rem;
     display: inline;
