Update - Justin: Fix errors on Student Homepage on anesu Branch

--- a/study-system-app/src/Routes/StudentHome/components/StudentNavBar.scss
+++ b/study-system-app/src/Routes/StudentHome/components/StudentNavBar.scss
@@ -12,6 +12,7 @@ $secondColour: #1c5ad8;
   }
   .page-links{
     margin-right: 530px;
+    padding-top: 25px;
   }
   .link-one{
     margin-right: 40px;
@@ -35,6 +36,7 @@ $secondColour: #1c5ad8;
     .nav-avatar-text{
       font-size: 1rem;
       margin-right: 15px;
+      margin-left: 450px;
       cursor: default;
     }
     #dropdown-menu-align-right{
