--- a/study-system-app/src/Routes/StudentProfile/components/EditStudentProfile.scss
+++ b/study-system-app/src/Routes/StudentProfile/components/EditStudentProfile.scss
@@ -31,4 +31,9 @@ $mainColour-dark: #F84574;
       width: 100%;
     }
   }
+  #course-dropdown, #major-dropdown{
+    background-color: white;
+    border: 1px solid black;
+    color: black;
+  }
 }
