Additional styling to dashboard

--- a/study-system-app/src/Routes/Admin/AdminClasses/components/AdminClassManagement.scss
+++ b/study-system-app/src/Routes/Admin/AdminClasses/components/AdminClassManagement.scss
@@ -2,7 +2,7 @@
 $mainColour: #FF6584;
 $mainColour-dark: #F84574;
 
-.course-classes {
+.single-class {
   margin: 0 10%;
   button {
     background-color: $mainColour;
