Class disputes for css styling

--- a/study-system-app/src/Routes/Admin/AdminClasses/components/AdminClassManagement.scss
+++ b/study-system-app/src/Routes/Admin/AdminClasses/components/AdminClassManagement.scss
@@ -84,7 +84,7 @@ $mainColour-dark: #F84574;
 }
 
 @media (min-width: 889px){
-  .course-classes {
+  .single-class {
     .class-view-container {
       hr{
         width: 85%;
