--- a/study-system-app/src/Routes/Admin/AdminCourses/components/AdminCourseManagement.scss
+++ b/study-system-app/src/Routes/Admin/AdminCourses/components/AdminCourseManagement.scss
@@ -1,7 +1,34 @@
+//Colour variables
+$mainColour: #FF6584;
+$mainColour-dark: #F84574;
+
 .course-classes {
   margin: 0 10%;
-  h1{
-    font-size: 1.5rem;
+  button {
+    background-color: $mainColour;
+    color: white;
+    outline: none;
+    border: none;
+  }
+  .heading{
+    width: 100%;
+    display: grid;
+    h1{
+      grid-column: 1;
+      font-size: 1.5rem;
+      justify-self: left;
+      display: inline-grid;
+    }
+    .button-container{
+      grid-column: 2;
+      display: inline-grid;
+      justify-self: right;
+      button{
+        font-size: 17px;
+        padding: 0.5em 1em;
+        margin-top: -0.5em;
+      }
+    }
   }
   .card-container {
     width: 100%;
@@ -11,6 +38,7 @@
     .wide-card {
       width: 100%;
       height: 75px;
+      font-size: 1.25em;
     }
   }
 }
