--- a/study-system-app/src/Routes/StudentProfile/components/EditStudentProfile.scss
+++ b/study-system-app/src/Routes/StudentProfile/components/EditStudentProfile.scss
@@ -48,7 +48,7 @@ $mainColour: #4267B2;
 
   .dropdown-menu {
     height: 200px;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   #profile-values{
