--- a/study-system-app/src/Routes/Admin/RequestsInbox/components/AllRequests.scss
+++ b/study-system-app/src/Routes/Admin/RequestsInbox/components/AllRequests.scss
@@ -14,13 +14,9 @@ $mainColour-dark: #F84574;
     row-gap: 10px;
     .wide-card {
       width: 100%;
-      height: 75px;
+      height: 100%;
       font-size: 1.25em;
-    }
-    .wide-card:hover {
-      background-color: $mainColour;
-      color: white;
-      cursor: pointer;
+      text-align: center;
     }
   }
 }
