--- a/study-system-app/src/Routes/StudentHome/components/StudentDashboard.scss
+++ b/study-system-app/src/Routes/StudentHome/components/StudentDashboard.scss
@@ -1,7 +1,6 @@
 .student-dashboard {
-  margin-left: 140px;
-  margin-right: 140px;
-  // h1{
+  margin: 0 9%;
+   // h1{
   //   font-size: 1.5rem;
   // }
   .subject{
